@@ -3,7 +3,6 @@ package org.tkit.document.management.rs.v1;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import javax.annotation.Priority;
 import javax.ws.rs.WebApplicationException;
@@ -117,7 +116,7 @@ public class ExceptionToRFCProblemMapper implements ExceptionMapper<Exception> {
         }
         return Arrays.stream(cause.getStackTrace())
                 .map(this::mapStackTraceElement)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private RFCProblemDetailDTO mapStackTraceElement(StackTraceElement stackTraceElement) {
